
functions - general:
 * getResamplingIndices(inner = TRUE) now correctly returns the inner indices (before inner indices referred to the subset of the respective outer level train set)

filter - new:
 * praznik.JMI
 * praznik.DISR
 * praznik.JMIM
 * praznik.MIM
 * praznik.NJMIM
 * praznik.MRMR
 * praznik.CMIM

filter - general:
 * Replaced filters `information.gain`, `gainratio` and `symmetrical.uncertainty`depending on package `FSelector` by package `FSelectorRcpp`. 
  The change comes with a ~ 100 times speedup.

learners - new:
 * classif.liquidSVM
 * regr.liquidSVM

mlr 2.13:
--------------------------------------------------------------------------------

general:
 * Disabled unit tests for CRAN, we test on travis only now
 * Suppress messages with show.learner.output = FALSE

functions - general:
 * plotHyperParsEffect: add colors

functions - new:
 * getResamplingIndices
 * createSpatialResamplingPlots

learners - general:
 *  regr.nnet: Removed unneeded params linout, entropy, softmax and censored
 *  regr.ranger: Add weight handling

learners - removed:
 * {classif,regr}.blackboost: broke API with new release
 * regr.elmNN : package was removed from CRAN
 * classif.lqa : package was removed from CRAN


mlr 2.12:
--------------------------------------------------------------------------------

general:
 * Support for functional data (fda) using matrix columns has been added.
 * Relaxed the way wrappers can be nested -- the only explicitly forbidden
  combination is to wrap a tuning wrapper around another optimization wrapper
 * Refactored the resample progress messages to give a better overview and
  distinguish between train and test measures better
 * calculateROCMeasures now returns absolute instead of relative values
 * Added support for spatial data by providing spatial partitioning methods "SpCV" and "SpRepCV".
 * Added new spatial.task classification task.
 * Added new spam.task classification task.