@@ -20,37 +20,33 @@
 #' @rdname FeatSelResult
 NULL
 
-
-makeFeatSelResult = function(learner, control, resampling, x, y, threshold, opt.path) {
-  makeOptResult(learner, control, resampling, x, y, threshold, opt.path, "FeatSelResult")
-}
-
-
 #' @export
 print.FeatSelResult = function(x, ...) {
   catf("FeatSel result:")
 
-  n.feats = length(x$x)
-  printed.features = 10L
-  if (n.feats > printed.features)
-    x = c(head(x, printed.features), "...")
-  else
-    x = head(x, printed.features)
+  shortenX = function(x) {
+    clipString(collapse(x, ", "), 50L)
+  }
 
-  catf("Features (%i): %s", n.feats, collapse(x$x, ", "))
+  if (!all.equal(x$x.bit.names, x$x)) {
+    catf("Bits (%i): %s", length(x$x.bit.names), shortenX(x$x.bit.names))
+  }
+  catf("Features (%i): %s", length(x$x), shortenX(x$x))
   if (!is.null(x$threshold))
     catf("Threshold: %s", collapse(sprintf("%2.2f", x$threshold)))
   catf("%s", perfsToString(x$y))
 }
 
-makeFeatSelResultFromOptPath = function(learner, measures, resampling, control, opt.path,
-  dob = opt.path$env$dob, ties = "random") {
+makeFeatSelResultFromOptPath = function(learner, measures, resampling, control, opt.path, dob = opt.path$env$dob, ties = "random", task, bits.to.features) {
 
   i = getOptPathBestIndex(opt.path, measureAggrName(measures[[1]]), dob = dob, ties = ties)
   e = getOptPathEl(opt.path, i)
   # if we had threshold tuning, get th from op and set it in result object
   threshold = if (control$tune.threshold) e$extra$threshold else NULL
-  makeFeatSelResult(learner, control, names(e$x)[e$x == 1], e$y, resampling, threshold, opt.path)
+  x.bits = unlist(e$x)
+  x.bit.names = names(e$x)[e$x == 1]
+  x = bits.to.features(x.bits, task)
+  makeOptResult(learner, control, x, e$y, resampling, threshold, opt.path, "FeatSelResult", x.bit.names = x.bit.names)
 }
 
 
